--- a/css/styles.css
+++ b/css/styles.css
@@ -1108,6 +1108,9 @@ a.resume-btn:active {
     padding-top: 90px;
     padding-bottom: 100px;
     background: #fff;
+    
+    
+    
 }
 
 #portfolio * {
@@ -1115,25 +1118,39 @@ a.resume-btn:active {
 }
 
 #portfolio .portfolio-row {
-    margin-left: 50px;
-    margin-right: 50px;
+    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    
+    
+    
 }
 
 @media (max-width: 950px) {
     #portfolio .portfolio-row {
         margin-left: 0px;
         margin-right: 0px;
+        
+
     }
 }
 
 #portfolio .section-heading {
     padding-bottom: 0px;
     margin-bottom: 20px;
+    
+    
+    
 }
 
 #portfolio .coming-soon {
     margin-bottom: 50px;
     text-transform: lowercase;
+    
+    
 }
 
 #portfolio .portfolio-item-wrapper {
@@ -1142,6 +1159,7 @@ a.resume-btn:active {
     padding: 0 0 5px;
     margin: 0 1% 30px;
     vertical-align: top;
+    
 }
 
 @media (max-width: 950px) {
@@ -1378,7 +1396,7 @@ ul.social-buttons li a:active {
 }
 
 #instagram:hover {
-    background-color: #9c5faf;
+    background-color: #b800f0;
 }
 
 #codepen:hover {
